LAB3/y.output
Terminals unused in grammar

   DO
   BREAK
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 $@1: /* empty */

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement

    8 $@2: /* empty */

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   10 enter_func: /* empty */

   11 param_list: param_list COMMA type_specifier ID
   12           | param_list COMMA type_specifier
   13           | type_specifier ID
   14           | type_specifier

   15 compound_statement: LCURL enter_func statements RCURL
   16                   | LCURL enter_func RCURL

   17 variable_decl: type_specifier declaration_list SEMICOLON

   18 type_specifier: INT
   19               | FLOAT
   20               | VOID
   21               | CHAR

   22 declaration_list: declaration_list COMMA ID
   23                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   24                 | ID
   25                 | ID LTHIRD CONST_INT RTHIRD

   26 statements: statement
   27           | statements statement

   28 statement: variable_decl
   29          | func_definition
   30          | expression_statement
   31          | compound_statement
   32          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   33          | IF LPAREN expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement ELSE statement
   35          | WHILE LPAREN expression RPAREN statement
   36          | PRINTLN LPAREN ID RPAREN SEMICOLON
   37          | RETURN expression SEMICOLON

   38 expression_statement: SEMICOLON
   39                     | expression SEMICOLON

   40 variable: ID
   41         | ID LTHIRD expression RTHIRD

   42 expression: logic_expression
   43           | variable ASSIGNOP logic_expression

   44 logic_expression: rel_expression
   45                 | rel_expression LOGICOP rel_expression

   46 rel_expression: simple_expression
   47               | simple_expression RELOP simple_expression

   48 simple_expression: term
   49                  | simple_expression ADDOP term

   50 term: unary_expression
   51     | term MULOP unary_expression

   52 unary_expression: ADDOP unary_expression
   53                 | NOT unary_expression
   54                 | factor_info

   55 factor_info: factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | variable INCOP
   62       | variable DECOP

   63 argument_list: arguments
   64              | /* empty */

   65 arguments: arguments COMMA logic_expression
   66          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 33 34
ELSE (259) 34
FOR (260) 32
WHILE (261) 35
DO (262)
BREAK (263)
INT (264) 18
CHAR (265) 21
FLOAT (266) 19
DOUBLE (267)
VOID (268) 20
RETURN (269) 37
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 36
ADDOP (275) 49 52
MULOP (276) 51
INCOP (277) 61
DECOP (278) 62
RELOP (279) 47
ASSIGNOP (280) 43
LOGICOP (281) 45
NOT (282) 53
LPAREN (283) 7 9 32 33 34 35 36 57 58
RPAREN (284) 7 9 32 33 34 35 36 57 58
LCURL (285) 15 16
RCURL (286) 15 16
LTHIRD (287) 23 25 41
RTHIRD (288) 23 25 41
COMMA (289) 11 12 22 23 65
SEMICOLON (290) 17 36 37 38 39
CONST_INT (291) 23 25 59
CONST_FLOAT (292) 60
ID (293) 7 9 11 13 22 23 24 25 36 40 41 57
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 7 9, on right: 5 29
$@1 (45)
    on left: 6, on right: 7
$@2 (46)
    on left: 8, on right: 9
enter_func (47)
    on left: 10, on right: 15 16
param_list (48)
    on left: 11 12 13 14, on right: 7 11 12
compound_statement (49)
    on left: 15 16, on right: 7 9 31
variable_decl (50)
    on left: 17, on right: 4 28
type_specifier (51)
    on left: 18 19 20 21, on right: 7 9 11 12 13 14 17
declaration_list (52)
    on left: 22 23 24 25, on right: 17 22 23
statements (53)
    on left: 26 27, on right: 15 27
statement (54)
    on left: 28 29 30 31 32 33 34 35 36 37, on right: 26 27 32 33 34
    35
expression_statement (55)
    on left: 38 39, on right: 30 32
variable (56)
    on left: 40 41, on right: 43 56 61 62
expression (57)
    on left: 42 43, on right: 32 33 34 35 37 39 41 58
logic_expression (58)
    on left: 44 45, on right: 42 43 65 66
rel_expression (59)
    on left: 46 47, on right: 44 45
simple_expression (60)
    on left: 48 49, on right: 46 47 49
term (61)
    on left: 50 51, on right: 48 49 51
unary_expression (62)
    on left: 52 53 54, on right: 50 51 52 53
factor_info (63)
    on left: 55, on right: 54
factor (64)
    on left: 56 57 58 59 60 61 62, on right: 55
argument_list (65)
    on left: 63 64, on right: 57
arguments (66)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   18 type_specifier: INT .

    $default  reduce using rule 18 (type_specifier)


State 2

   21 type_specifier: CHAR .

    $default  reduce using rule 21 (type_specifier)


State 3

   19 type_specifier: FLOAT .

    $default  reduce using rule 19 (type_specifier)


State 4

   20 type_specifier: VOID .

    $default  reduce using rule 20 (type_specifier)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 11


State 6

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit .

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 10

    7 func_definition: type_specifier . ID LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   17 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_definition: type_specifier ID . LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   24 declaration_list: ID .
   25                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 24 (declaration_list)


State 14

   17 variable_decl: type_specifier declaration_list . SEMICOLON
   22 declaration_list: declaration_list . COMMA ID
   23                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_definition: type_specifier ID LPAREN . param_list RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 19

    param_list      go to state 20
    type_specifier  go to state 21


State 16

   25 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   22 declaration_list: declaration_list COMMA . ID
   23                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   17 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 17 (variable_decl)


State 19

    9 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 24


State 20

    7 func_definition: type_specifier ID LPAREN param_list . RPAREN $@1 compound_statement
   11 param_list: param_list . COMMA type_specifier ID
   12           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 21

   13 param_list: type_specifier . ID
   14           | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 14 (param_list)


State 22

   25 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 23

   22 declaration_list: declaration_list COMMA ID .
   23                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 22 (declaration_list)


State 24

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 25

    7 func_definition: type_specifier ID LPAREN param_list RPAREN . $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 32


State 26

   11 param_list: param_list COMMA . type_specifier ID
   12           | param_list COMMA . type_specifier

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 33


State 27

   13 param_list: type_specifier ID .

    $default  reduce using rule 13 (param_list)


State 28

   25 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 29

   23 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 30

   15 compound_statement: LCURL . enter_func statements RCURL
   16                   | LCURL . enter_func RCURL

    $default  reduce using rule 10 (enter_func)

    enter_func  go to state 35


State 31

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 32

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 36


State 33

   11 param_list: param_list COMMA type_specifier . ID
   12           | param_list COMMA type_specifier .

    ID  shift, and go to state 37

    $default  reduce using rule 12 (param_list)


State 34

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 38


State 35

   15 compound_statement: LCURL enter_func . statements RCURL
   16                   | LCURL enter_func . RCURL

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statements            go to state 55
    statement             go to state 56
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 36

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement .

    $default  reduce using rule 7 (func_definition)


State 37

   11 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 11 (param_list)


State 38

   23 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 39

   33 statement: IF . LPAREN expression RPAREN statement
   34          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 67


State 40

   32 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 41

   35 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


State 42

   37 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 70
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 43

   36 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 71


State 44

   52 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 72
    unary_expression  go to state 73
    factor_info       go to state 65
    factor            go to state 66


State 45

   53 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 72
    unary_expression  go to state 74
    factor_info       go to state 65
    factor            go to state 66


State 46

   58 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 75
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 47

   16 compound_statement: LCURL enter_func RCURL .

    $default  reduce using rule 16 (compound_statement)


State 48

   38 expression_statement: SEMICOLON .

    $default  reduce using rule 38 (expression_statement)


State 49

   59 factor: CONST_INT .

    $default  reduce using rule 59 (factor)


State 50

   60 factor: CONST_FLOAT .

    $default  reduce using rule 60 (factor)


State 51

   40 variable: ID .
   41         | ID . LTHIRD expression RTHIRD
   57 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 76
    LTHIRD  shift, and go to state 77

    $default  reduce using rule 40 (variable)


State 52

   29 statement: func_definition .

    $default  reduce using rule 29 (statement)


State 53

   31 statement: compound_statement .

    $default  reduce using rule 31 (statement)


State 54

   28 statement: variable_decl .

    $default  reduce using rule 28 (statement)


State 55

   15 compound_statement: LCURL enter_func statements . RCURL
   27 statements: statements . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 78
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 79
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 56

   26 statements: statement .

    $default  reduce using rule 26 (statements)


State 57

   30 statement: expression_statement .

    $default  reduce using rule 30 (statement)


State 58

   43 expression: variable . ASSIGNOP logic_expression
   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP     shift, and go to state 80
    DECOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82

    $default  reduce using rule 56 (factor)


State 59

   39 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 60

   42 expression: logic_expression .

    $default  reduce using rule 42 (expression)


State 61

   44 logic_expression: rel_expression .
   45                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 84

    $default  reduce using rule 44 (logic_expression)


State 62

   46 rel_expression: simple_expression .
   47               | simple_expression . RELOP simple_expression
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85
    RELOP  shift, and go to state 86

    $default  reduce using rule 46 (rel_expression)


State 63

   48 simple_expression: term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 48 (simple_expression)


State 64

   50 term: unary_expression .

    $default  reduce using rule 50 (term)


State 65

   54 unary_expression: factor_info .

    $default  reduce using rule 54 (unary_expression)


State 66

   55 factor_info: factor .

    $default  reduce using rule 55 (factor_info)


State 67

   33 statement: IF LPAREN . expression RPAREN statement
   34          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 88
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 68

   32 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 89
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 69

   35 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 90
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 70

   37 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 91


State 71

   36 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 92


State 72

   56 factor: variable .
   61       | variable . INCOP
   62       | variable . DECOP

    INCOP  shift, and go to state 80
    DECOP  shift, and go to state 81

    $default  reduce using rule 56 (factor)


State 73

   52 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 52 (unary_expression)


State 74

   53 unary_expression: NOT unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 75

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 93


State 76

   57 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    $default  reduce using rule 64 (argument_list)

    variable           go to state 72
    logic_expression   go to state 94
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66
    argument_list      go to state 95
    arguments          go to state 96


State 77

   41 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 97
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 78

   15 compound_statement: LCURL enter_func statements RCURL .

    $default  reduce using rule 15 (compound_statement)


State 79

   27 statements: statements statement .

    $default  reduce using rule 27 (statements)


State 80

   61 factor: variable INCOP .

    $default  reduce using rule 61 (factor)


State 81

   62 factor: variable DECOP .

    $default  reduce using rule 62 (factor)


State 82

   43 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 72
    logic_expression   go to state 98
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 83

   39 expression_statement: expression SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 84

   45 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 72
    rel_expression     go to state 99
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 85

   49 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 72
    term              go to state 100
    unary_expression  go to state 64
    factor_info       go to state 65
    factor            go to state 66


State 86

   47 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 72
    simple_expression  go to state 101
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 87

   51 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 72
    unary_expression  go to state 102
    factor_info       go to state 65
    factor            go to state 66


State 88

   33 statement: IF LPAREN expression . RPAREN statement
   34          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 103


State 89

   32 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 104
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 90

   35 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 105


State 91

   37 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 37 (statement)


State 92

   36 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 106


State 93

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 94

   66 arguments: logic_expression .

    $default  reduce using rule 66 (arguments)


State 95

   57 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 107


State 96

   63 argument_list: arguments .
   65 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 108

    $default  reduce using rule 63 (argument_list)


State 97

   41 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 109


State 98

   43 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 43 (expression)


State 99

   45 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 45 (logic_expression)


State 100

   49 simple_expression: simple_expression ADDOP term .
   51 term: term . MULOP unary_expression

    MULOP  shift, and go to state 87

    $default  reduce using rule 49 (simple_expression)


State 101

   47 rel_expression: simple_expression RELOP simple_expression .
   49 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 85

    $default  reduce using rule 47 (rel_expression)


State 102

   51 term: term MULOP unary_expression .

    $default  reduce using rule 51 (term)


State 103

   33 statement: IF LPAREN expression RPAREN . statement
   34          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 110
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 104

   32 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 111
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 105

   35 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 112
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 106

   36 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 113


State 107

   57 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 57 (factor)


State 108

   65 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 72
    logic_expression   go to state 114
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 109

   41 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 41 (variable)


State 110

   33 statement: IF LPAREN expression RPAREN statement .
   34          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 115

    $default  reduce using rule 33 (statement)


State 111

   32 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 116


State 112

   35 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 35 (statement)


State 113

   36 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 36 (statement)


State 114

   65 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 65 (arguments)


State 115

   34 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 39
    FOR          shift, and go to state 40
    WHILE        shift, and go to state 41
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 42
    PRINTLN      shift, and go to state 43
    ADDOP        shift, and go to state 44
    NOT          shift, and go to state 45
    LPAREN       shift, and go to state 46
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 117
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 116

   32 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement
